--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ redirect_from:
 <div id="index-hero">
   <div class="row">
     <div class="small-12 columns">
-      <h1>Cross platform IDE for C#, F# and more</h1>
+      <h1 style="text-shadow:2px 0px 3px #333">Cross platform IDE for C#, F# and more</h1>
       <img src="/images/md-hero.png" alt="Screenshot of Xamarin Studio">
     </div>
   </div>
